--- a/WebService/src/main/app/public/index.html
+++ b/WebService/src/main/app/public/index.html
@@ -28,6 +28,12 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
+    <button id="hi">Say HI</button>
+    <button id="unknown">Send unknown command</button>
+    <button id="stop">Stop worker</button>
+    <output id="result"></output>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
